--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
+    height: 100vh;
     margin: 0;
     padding: 0;
-    background-image: url('./assets/Pikachu.png');
-    background-position: right;
-    background-repeat: no-repeat;
-    background-size: 30%;
-    background-color: #ffca00;
+    background-image: linear-gradient( 135deg, #FDD819 10%, #E80505 100%);
+
+
+
 }
 
 .pikachu_bk {
@@ -21,6 +21,7 @@ body {
 
 .container {
     max-width: 100%;
+    margin-top: 20px;
 }
 
 h1 {
@@ -44,15 +45,21 @@ input {
 button {
     width: 100%;
     padding: 20px 20px;
-    background-color: #4CAF50;
+    background-color: #00588b;
     color: #fff;
-    border: none;
+    border: transparent solid 1px;
     border-radius: 10px;
+    box-sizing: border-box;
     cursor: pointer;
+    text-transform: uppercase;
+    font-size: 18px;
 }
 
 button:hover {
-    background-color: #3E8E41;
+    transition: 0.3s;
+    background-color: #bbb819;
+    border: solid #00588b 1px;
+    box-sizing: border-box;
 }
 
 #pokemon-info {
@@ -60,17 +67,12 @@ button:hover {
     flex-direction: column;
     align-items: center;
 
-    max-height: 380px;
-    min-height: 380px;
-    margin-top: 15px;
-
     font-size: 25px;
-    padding: 25px;
 
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(3px);
-    
+
 }
 
 form {
@@ -85,6 +87,7 @@ form {
     margin-top: -130px;
     background-color: slategray;
     border-radius: 50%;
+    border: #fff solid 5px;
     height: 200px;
     padding: 10px;
 }
