--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
-body {
+* {
     font-family: 'Lato', sans-serif;
+}
+
+body {
     display: flex;
     align-items: start;
     justify-content: center;
-    height: 100vh;
     margin: 0;
     padding: 0;
-    background-image: linear-gradient( 135deg, #FDD819 10%, #E80505 100%);
-
-
-
+    height: 100vh;
+    background-image: url('./assets/bk.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: fixed;
+    background-attachment: fixed;
 }
 
 .pikachu_bk {
@@ -22,6 +26,10 @@ body {
 .container {
     max-width: 100%;
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
@@ -93,7 +101,12 @@ form {
 }
 
 @media (max-width: 480px) {
-    .text {
-        font-size: 16px;
+    .pokeinfo-img {
+        width: 350px;
+        margin: 0 auto;
+    }
+
+    p {
+        text-align: center;
     }
 }
